# aws-bedrock-multi-agent-blueprint

./: .gitignore  README.md  pyproject.toml
diag/: architecture.eraserdiagram
infra/: .gitattributes  .gitignore  .prettierrc.json  .projenrc.js  cdk.context.json  cdk.json  cicd.yml  package.json
infra/.projen/: deps.json  tasks.json
infra/src/: main.ts
infra/src/common/: stack.ts
infra/src/prompts/: protocol_agent_instruction.txt  protocol_agent_kb.txt  protocol_agent_orchestration.txt  supervisor_agent_instruction.txt  trial_agent_instruction.txt
infra/src/resources/: datasync.ts
infra/src/stacks/: app.ts  auth.ts  bedrock.ts  graph.ts  vector.ts
src/app/: Dockerfile  requirements.txt
src/app/src/: __init__.py  app.py
src/app/src/agent/: agent.py  handlers.py  types.py
src/app/src/components/: feedback.py  sidebar.py  style.py
src/app/src/core/: auth.py  langfuse_client.py  s3.py  session.py
src/tools/clinicaltrials/: app.py  requirements.dev.txt  requirements.txt  schema.json
src/tools/clinicaltrials/models/: trial.py
src/tools/clinicaltrials/services/: trial_service.py
src/tools/clinicaltrials/utils/: helpers.py
